-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
Fully Compatible
-
ALL
-
Repl 2018-11-19
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A pointer field is not initialized in the constructor
Defect 105092 (STATIC_C)
Checker UNINIT_CTOR (subcategory pointer)
File: /src/mongo/db/repl/replication_coordinator_mock.cpp
Function mongo::repl::ReplicationCoordinatorMock::ReplicationCoordinatorMock(mongo::ServiceContext *, const mongo::repl::ReplSettings &)
/src/mongo/db/repl/replication_coordinator_mock.h, line: 291
Class member declaration for "_storage".
StorageInterface* _storage;
/src/mongo/db/repl/replication_coordinator_mock.cpp, line: 63
Non-static class member "_storage" is not initialized in this constructor nor in any functions that it calls.
: _service(service), _settings(settings) {}