SERVER-37855 Ensure pointer is default initialized to nullptr